@@ -36,6 +36,7 @@ CHANGES IN CUPS V2.0.2
 	  error (STR #4559)
 	- The ippfind and ipptool programs now correctly match hostnames with
 	  trailing dots (STR #4563)
+	- The ipptool timeout option did not work (STR #4515)
 
 
 CHANGES IN CUPS V2.0.1
